# search-engine

./: .gitignore  README.md  build.sh
CLI/: CMakeLists.txt
CLI/UI/: CMakeLists.txt  ConsoleUI.hpp
Crawler/: CMakeLists.txt  config.json
Crawler/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp
Crawler/Crawler/: CMakeLists.txt  Crawler.hpp  RedirectFStream.hpp  main.cpp
Crawler/DocumentRepo/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentRepo.cpp  DocumentRepo.hpp  DocumentRepoDb.cpp  DocumentRepoDb.hpp  DocumentRepoInMem.cpp  DocumentRepoInMem.hpp
Crawler/DocumentRepository/: Document.cpp  Document.hpp  DocumentRepository.cpp  DocumentRepository.hpp
Crawler/IndexRepository/: CMakeLists.txt  IndexRepository.hpp
Crawler/LinkEntryRepo/: CMakeLists.txt  LinkEntry.cpp  LinkEntry.hpp  LinkEntryRepo.cpp  LinkEntryRepo.hpp  LinkEntryRepoDb.cpp  LinkEntryRepoDb.hpp  LinkEntryRepoInMem.cpp  LinkEntryRepoInMem.hpp  LinkStatus.hpp
Crawler/LinkEntryRepository/: CMakeLists.txt  LinkEntry.cpp  LinkEntry.hpp  LinkEntryRepository.cpp  LinkEntryRepository.hpp  LinkStatus.hpp
Crawler/PageLoader/: CMakeLists.txt  Page.cpp  Page.hpp  PageLoader.cpp  PageLoader.hpp
Crawler/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
Crawler/Tests/: CMakeLists.txt  PageLoaderTest.cpp  ParserTest.cpp  checkLoader.cc  checkParser.cc  main.cpp  testRunner.h
Crawler/Tests/parser/: invalid.html  valid
Crawler/WebsiteRepo/: CMakeLists.txt  Website.cpp  Website.hpp  WebsiteRepo.cpp  WebsiteRepo.hpp  WebsiteRepoDb.cpp  WebsiteRepoDb.hpp  WebsiteRepoInMem.cpp  WebsiteRepoInMem.hpp  WebsiteStatus.hpp
Crawler/WebsiteRepository/: CMakeLists.txt  Website.cpp  Website.hpp  WebsiteRepository.cpp  WebsiteRepository.hpp
Crawler/crawler/: CMakeLists.txt  main.cpp
Crawler/lib/: CMakeLists.txt
Crawler/lib/LinkEntryRepository/: CMakeLists.txt  LinkEntry.hpp
Crawler/lib/PageLoader/: CMakeLists.txt  Page.cpp  Page.hpp  PageLoader.cpp  PageLoader.hpp
Crawler/lib/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
Crawler/lib/WebsiteRepository/: CMakeLists.txt  Website.hpp  WebsiteRepository.cpp
Crawler/tests/: CMakeLists.txt  PageLoader-test.cpp  Parser-test.cpp  main.cpp  parserTest.html
Search/: CMakeLists.txt  RedirectFStream.hpp  SearchResult.hpp  config.json  main.cpp
Search/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
Search/Search/: CMakeLists.txt  Search.cpp  Search.hpp
Search/Search/Database/: Database.cpp  Database.hpp
Search/Searcher/: CMakeLists.txt  Searcher.cpp  Searcher.hpp
Search/Server/: CMakeLists.txt  Request.cpp  Request.hpp  Server.cpp  Server.hpp
Search/Server/Searcher/: CMakeLists.txt  Searcher.cpp  Searcher.hpp
UI/: CMakeLists.txt  Client.hpp  Searcher.hpp  main.cpp
UI/UI/: ConsoleUI.cpp  ConsoleUI.hpp  UI.hpp
